@@ -315,6 +315,7 @@ subdir('src/lib/gcrypt')
 subdir('src/lib/wrap')
 subdir('src/lib/nfs')
 subdir('src/lib/oss')
+subdir('src/lib/pcre')
 subdir('src/lib/pulse')
 subdir('src/lib/sndio')
 subdir('src/lib/sqlite')
