@@ -1,0 +1,66 @@
+/*
+ * Copyright 2007-2018 Content Management AG
+ * All rights reserved.
+ *
+ * author: Max Kellermann <mk@cm4all.com>
+ *
+ * Redistribution and use in source and binary forms, with or without
+ * modification, are permitted provided that the following conditions
+ * are met:
+ *
+ * - Redistributions of source code must retain the above copyright
+ * notice, this list of conditions and the following disclaimer.
+ *
+ * - Redistributions in binary form must reproduce the above copyright
+ * notice, this list of conditions and the following disclaimer in the
+ * documentation and/or other materials provided with the
+ * distribution.
+ *
+ * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
+ * ``AS IS'' AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
+ * LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS
+ * FOR A PARTICULAR PURPOSE ARE DISCLAIMED.  IN NO EVENT SHALL THE
+ * FOUNDATION OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT,
+ * INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
+ * (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
+ * SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION)
+ * HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT,
+ * STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
+ * ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED
+ * OF THE POSSIBILITY OF SUCH DAMAGE.
+ */
+
+#ifndef REGEX_POINTER_HXX
+#define REGEX_POINTER_HXX
+
+#include "util/StringView.hxx"
+#include "util/Compiler.h"
+
+#include <pcre.h>
+
+#include <array>
+
+class RegexPointer {
+protected:
+	pcre *re = nullptr;
+	pcre_extra *extra = nullptr;
+
+	unsigned n_capture = 0;
+
+public:
+	constexpr bool IsDefined() const noexcept {
+		return re != nullptr;
+	}
+
+	gcc_pure
+	bool Match(StringView s) const noexcept {
+		/* we don't need the data written to ovector, but PCRE can
+		   omit internal allocations if we pass a buffer to
+		   pcre_exec() */
+		std::array<int, 16> ovector;
+		return pcre_exec(re, extra, s.data, s.size,
+				 0, 0, &ovector.front(), ovector.size()) >= 0;
+	}
+};
+
+#endif
