@@ -1,4 +1,6 @@
 ver 0.21.2 (not yet released)
+* protocol
+  - operator "=~" matches a regular expression
 * decoder
   - ffmpeg: require FFmpeg 3.1 or later
   - ffmpeg: fix broken sound with certain codecs
